k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: player-api
  labels:
    app: player-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: player-api
  template:
    metadata:
      labels:
        app: player-api
    spec:
      containers:
        - name: player-api
          image: player-api:v1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          emptyDir: {}
